Closed Bug 375444 Opened 17 years ago Closed 17 years ago

overflow warning in nsJSEnvironment.cpp using gcc 4.1.2

Categories

(Core :: DOM: Core & HTML, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha4

People

(Reporter: sayrer, Assigned: sayrer)

Details

Attachments

(1 file, 1 obsolete file)

 
Attached patch cast to int8 (obsolete) — Splinter Review
Assignee: general → sayrer
Status: NEW → ASSIGNED
Attachment #259709 - Flags: superreview?(jst)
Attachment #259709 - Flags: review?(jst)
Attached patch cast to int8Splinter Review
Attachment #259709 - Attachment is obsolete: true
Attachment #259710 - Flags: superreview?(jst)
Attachment #259710 - Flags: review?(jst)
Attachment #259709 - Flags: superreview?(jst)
Attachment #259709 - Flags: review?(jst)
Comment on attachment 259710 [details] [diff] [review]
cast to int8

r+sr=jst
Attachment #259710 - Flags: superreview?(jst)
Attachment #259710 - Flags: superreview+
Attachment #259710 - Flags: review?(jst)
Attachment #259710 - Flags: review+
Checking in nsJSEnvironment.cpp;
/cvsroot/mozilla/dom/src/base/nsJSEnvironment.cpp,v  <--  nsJSEnvironment.cpp
new revision: 1.320; previous revision: 1.319
done
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9alpha4
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: