bug 375444. silence overflow warning in nsJSEnvironment.cpp using gcc 4.1.2. r+sr=jst